<?xml version="1.0"?>
<package format="2">
  <name>agv_ros</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for agv_ros</p>
    <p>This package contains configuration data, 3D models and launch files
for agv_ros robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_make</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
